--- a/lessons/r-lessons/r-plotting.qmd
+++ b/lessons/r-lessons/r-plotting.qmd
@@ -11,27 +11,27 @@ editor:
 
 # Introduction
 
-While you can make plots with just the packages that come bundled with base R, many R users make their visualizations entirely using the [`ggplot2`](https://ggplot2.tidyverse.org/index.html) package and an ecosystem of packages designed around it.
+While you can make plots with just the packages that come bundled with base R, many R users make their visualizations entirely using the [`ggplot2`](https://ggplot2.tidyverse.org/index.html) package and an [ecosystem of packages](https://exts.ggplot2.tidyverse.org/gallery/) designed around it.
 
-```{r}
+```{r ggplot2}
 # load the ggplot2 package
 library(ggplot2)
 ```
 
-As with the [previous session](r-intro.qmd), we'll be using the palmer penguins dataset. First, let's load the package and then inspect the raw data that is included (we'll learn more about the `dplyr` package in the next session).
+As with the [previous session](r-intro.qmd), we'll be using the Palmer penguins dataset. While we built our own combined dataset in the introduction session, now we're going to use the built-in raw dataset included in the palmerpenguins package (<i>install this first if you don't have it yet</i>). First, let's load the package. By loading the package, it gives us access to the `penguins_raw` data object that is included (notice that it isn't shown in our Global Environment, but you can see it in the environment of the palmerpenguins package). Let's inspect the data using the `glimpse()` function (we'll learn more about the `dplyr` package in the next session).
 
-```{r}
+```{r palmerpenguins}
 library(palmerpenguins)
 dplyr::glimpse(penguins_raw)
 ```
 
-We can see that this dataset includes many different measurements for individual penguins from three different studies. The studies cover both sexes of three different species of penguins from three different islands.
+As we discovered before, this dataset includes many different measurements for individual penguins from three different studies. The studies cover both sexes of three different species of penguins from three different islands in the Palmer Archipelago.
 
 # The ggplot2 basics
 
 The most important function in the `ggplot2` package is `ggplot()`. Note that this function doesn't include the "2" of the package name. Let's go ahead and try using this function on our penguins data.
 
-```{r}
+```{r ggplot-raw}
 ggplot(penguins_raw)
 ```
 
@@ -39,16 +39,19 @@ You'll notice that the `ggplot()` function doesn't actually do much by itself. H
 
 By using the `ggplot()` function, we are essentially stating that we are beginning a plotting "sentence". We then combine this with other "words" (function calls) using the `+` operator. The next component you usually want to specify in a `ggplot` "sentence" is our "aesthetic" mappings. These specify the columns of the dataset that correspond to each axis of the plot, including the x/y axes, but also the axes of color, shape, etc. We do this with the `aes()` function:
 
-```{r}
+```{r ggplot-aes}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`)
 ```
 
-Note that here we had to use the "`" symbol around the column names because the column names include spaces. If there are no spaces in your column names, you would just write out their names with no quotes or apostrophes.
+::: {.callout-note}
+## Spaces in column names
+Note that here we had to use the "`" symbol around the column names because the column names include spaces. If there are no spaces in your column names, you would just write out their names with no quotes or apostrophes. We'll discuss more about proper column names in the [next session](r-tidydata.qmd).
+:::
 
 Hey, it's starting to look like a plot now! Except there isn't any actual data being plotted. Let's fix that. We'll start off with a simple scatter plot by using the `geom_point()` function:
 
-```{r}
+```{r geom_point}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`) +
   geom_point()
@@ -56,11 +59,14 @@ ggplot(penguins_raw) +
 
 And there we go! You'll notice that with just a few lines, we've already made a pretty nice visualization of this penguin data. `ggplot2` does most of the work for us once we specify our dataset and our `x` and `y` variables.
 
-You may have also noticed a warning that some rows of the dataset contains missing values. We'll discuss this further in the next session, but for now we'll just ignore this warning.
+::: {.callout-note}
+## Missing data
+You may have noticed a warning that some rows of the dataset contain missing values. We'll discuss this further in the [next session](r-tidydata.qmd), but for now we'll just ignore this warning.
+:::
 
 Now, let's go a step further and color the points by another variable (e.g., the island of the penguins). With `ggplot2`, all that requires is specifying another aesthetic:
 
-```{r}
+```{r geom_point-color}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`, color = Island) +
   geom_point()
@@ -70,7 +76,7 @@ Notice that `ggplot2` comes with its own default color scheme. However, I would 
 
 First, let's try one of the [`viridis`](https://cran.r-project.org/web/packages/viridis/vignettes/intro-to-viridis.html) color palettes. Since this palette is included in `ggplot2`, all we need to do is add the proper "scale" to our `ggplot()` call. Scales tell ggplot how to handle a particular aesthetic, and are usually of the form `scale_[aesthetic]_[type]()`.
 
-```{r}
+```{r viridis}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`, color = Island) +
   geom_point() +
@@ -79,7 +85,7 @@ ggplot(penguins_raw) +
 
 Now let's try one of the [brewer color palettes](https://r-graph-gallery.com/38-rcolorbrewers-palettes.html).
 
-```{r}
+```{r brewer}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`, color = Island) +
   geom_point() +
@@ -88,7 +94,7 @@ ggplot(penguins_raw) +
 
 Outside of color, there are many other [aspects of the graph](https://ggplot2.tidyverse.org/articles/ggplot2-specs.html) that we can modify using "scale"s. For example, we can modify the shape of the points:
 
-```{r}
+```{r shape-aes}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`,
       color = Island, shape = Sex) +
@@ -98,7 +104,7 @@ ggplot(penguins_raw) +
 
 And the x/y axes:
 
-```{r}
+```{r axis-scales}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`,
       color = Island, shape = Sex) +
@@ -112,7 +118,7 @@ ggplot(penguins_raw) +
 
 The last basic thing you might want to do with `ggplot2` is modify the style of the visualization. This is extremely customizable, but the first place to start is with a [built-in theme](https://ggplot2.tidyverse.org/reference/ggtheme.html). I personally prefer the classic theme, which looks very similar to base R plots:
 
-```{r}
+```{r theme_classic}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`,
       color = Island, shape = Sex) +
@@ -125,7 +131,7 @@ ggplot(penguins_raw) +
 
 Using this built-in theme has changed many visual aspects of the graph, including changing the plot background color, adding axis lines, and removing the internal grid lines. If you look very closely, however, the axis tick labels are still a slight grey. We can use the `theme()` function to further customize the appearance and change this. In this case, we'll make the axis text elements have a black color instead of the default gray.
 
-```{r}
+```{r theming}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`,
       color = Island, shape = Sex) +
@@ -151,7 +157,7 @@ There are many other [types of plots](https://ggplot2.tidyverse.org/reference/#l
 
 We can visualize the density of values for a single variable with a histogram:
 
-```{r}
+```{r geom_histogram}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, fill = Species) +
   geom_histogram() +
@@ -159,21 +165,23 @@ ggplot(penguins_raw) +
   theme(axis.text = element_text(color = "black"))
 ```
 
-Note how histograms don't require a y-axis aesthetic by default. The counts are tabulated for you. If you specify a "fill" aesthetic, the default is to stack the bars which can sometimes be a bit misleading. You can also dodge them to fix this:
+::: {.callout-note}
+Histograms don't require a y-axis aesthetic by default. The counts are tabulated for you. If you specify a "fill" aesthetic, the default is to stack the bars which can sometimes be a bit misleading. You can also dodge them to fix this:
 
-```{r}
+```{r hist-dodge}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, fill = Species) +
   geom_histogram(position = "dodge") +
   theme_classic() +
   theme(axis.text = element_text(color = "black"))
 ```
+:::
 
 ### Boxplots and Violin Plotss
 
 We can visualize the density of values for a single variable across a discrete variable with boxplots or violin plots:
 
-```{r}
+```{r geom_boxplot}
 ggplot(penguins_raw) +
   aes(x = Island, y = `Culmen Length (mm)`) +
   geom_boxplot() +
@@ -181,7 +189,7 @@ ggplot(penguins_raw) +
   theme(axis.text = element_text(color = "black"))
 ```
 
-```{r}
+```{r geom_violin}
 ggplot(penguins_raw) +
   aes(x = Island, y = `Culmen Length (mm)`) +
   geom_violin(scale = "width", draw_quantiles = c(0.25, 0.5, 0.75)) +
@@ -189,13 +197,16 @@ ggplot(penguins_raw) +
   theme(axis.text = element_text(color = "black"))
 ```
 
-Note that many of these "geom"s have lots of options. For example, here we've decided to `scale` all of the violin plots to the same width and to draw the quartiles on them (mimicking the boxplots above).
+::: {.callout-note}
+#### Geom options
+Note that many of these "geom"s have lots of options. For example, here we've decided to `scale` all of the violin plots to the same width and to draw the quartiles on them (mimicking the boxplots above). You can see all of the options for a geom by checking out it's help page (`?geom_violin`) or on the ggplot [website](https://ggplot2.tidyverse.org/reference/geom_violin.html).
+:::
 
 ### 2D Contours
 
 We can also visualize the density of values across two continuous variables using a 2D contour. Here we'll use the isotope data from the penguins dataset. We'll expand the axes a little bit to better show the contours:
 
-```{r}
+```{r geom_density_2d}
 ggplot(penguins_raw) +
   aes(x = `Delta 15 N (o/oo)`, y = `Delta 13 C (o/oo)`) +
   geom_density_2d(linewidth = 0.25, colour = "black") +
@@ -209,7 +220,7 @@ ggplot(penguins_raw) +
 
 Since there isn't really any time series data in the penguins dataset, we'll take a quick detour and use the built-in `economics` dataset to explore visualizing a time series. In this case, we are looking at unemployment over time:
 
-```{r}
+```{r geom_line}
 ggplot(economics, aes(x = date, y = unemploy)) +
   geom_line() +
   theme_classic() +
@@ -218,20 +229,23 @@ ggplot(economics, aes(x = date, y = unemploy)) +
 
 `geom_path()` lets you explore how two variables are related over time. For example, unemployment and personal savings rate:
 
-```{r}
+```{r geom_path}
 ggplot(economics, aes(x = unemploy / pop, y = psavert)) +
   geom_path(aes(colour = as.numeric(date))) +
   theme_classic() +
   theme(axis.text = element_text(color = "black"))
 ```
 
-Note how we've used multiple columns of the data to define the x-axis here.
+::: {.callout-note}
+#### Multiple columns for individual aesthetics
+Note how we've used multiple columns of the data to define the x-axis here. You can use any sort of mathetical operators to combine multiple columns into a single aesthetic, as long as you are doing row-wise math. We'll learn about summary statistics for groups of rows in the [next session](r-tidydata.qmd).
+:::
 
 ## Combining layers
 
 We can also combine multiple layers to show the same data in different ways in the same plot. For example, we could show the raw data for the above contour plot in addition to the contours:
 
-```{r}
+```{r combined-layers}
 ggplot(penguins_raw) +
   aes(x = `Delta 15 N (o/oo)`, y = `Delta 13 C (o/oo)`) +
   geom_point() +
@@ -244,13 +258,16 @@ ggplot(penguins_raw) +
   theme(axis.text = element_text(color = "black"))
 ```
 
-Note that, when combining layers, the layers are added to the plot in order, so in this case the points are the bottom layer and the contour lines are the top layer. We changed the alpha of the middle layer to prevent the points from being blocked. I've also used the `coord_cartesian()` function to remove the default axis expansion. This way the background color reaches both axes and doesn't have a white gap.
+::: {.callout-note}
+### Layer order
+When combining layers, the layers are added to the plot in order, so in this case the points are the bottom layer and the contour lines are the top layer. We changed the alpha of the middle layer to prevent the points from being blocked. I've also used the `coord_cartesian()` function to remove the default axis expansion. This way the background color reaches both axes and doesn't have a white gap.
+:::
 
 ## Facetting
 
 Let's take our scatterplot example from earlier:
 
-```{r}
+```{r scatter-full}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`,
       color = Island, shape = Sex) +
@@ -264,7 +281,7 @@ ggplot(penguins_raw) +
 
 Now, what if we wanted to also split the data by the species of the penguins? We're already using color and shape, so what other aesthetic could we use? We could possible use some shapes that have both a fill and outline color, but that sounds messy. Instead of using another aesthetic, we could also use a `facet`. This splits the chart into multiple panels:
 
-```{r}
+```{r scatter-facet}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`,
       color = Island, shape = Sex) +
@@ -279,7 +296,7 @@ ggplot(penguins_raw) +
 
 We can get even crazier by faceting by multiple variables:
 
-```{r}
+```{r scatter-facet-grid}
 ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`,
       color = Island, shape = Sex) +
@@ -295,15 +312,15 @@ ggplot(penguins_raw) +
 OK, maybe we've gone a little too far here, but you get the picture!
 
 # Combining plots
-When publishing results, often we need to combine multiple figures into a single visualization. There are lots of packages for accomplishing this (even my own `deeptime` package has some functionality for it), but today we'll check out the [`patchwork`](https://patchwork.data-imaginist.com/) package which extends the "grammar of graphics" to combining plots.
+When publishing results, often we need to combine multiple figures into a single visualization. There are lots of packages for accomplishing this (even my own [deeptime](https://williamgearty.com/deeptime) package has some functionality for it), but today we'll check out the [`patchwork`](https://patchwork.data-imaginist.com/) package which extends the "grammar of graphics" to combining plots (you may need to install it if you haven't done so already).
 
-```{r}
+```{r patchwork}
 library(patchwork)
 ```
 
-First, let's go ahead and make some plots. Instead of plotting them, though, we'll save them as objects in our environment.
+First, let's go ahead and make some plots. Instead of plotting them, though, we'll save them as objects in our environment. Note that when you save a plot to an object it isn't displayed in the "Plots" tab.
 
-```{r}
+```{r plot-objects}
 g1 <- ggplot(penguins_raw) +
   aes(x = `Body Mass (g)`, y = `Flipper Length (mm)`) +
   geom_point() +
@@ -324,13 +341,13 @@ g2 <- ggplot(penguins_raw) +
 
 Now, in order to combine these, all we need to do is combine them using the `+` operator, like we did with the individual elements of the plots.
 
-```{r}
+```{r add-plots}
 g1 + g2
 ```
 
 You can see that `patchwork` does all of the work for us, lining up the different components of the plots. If we have more plots to combine, we can then use the `|` and `/` operators to make more complex arrangements of plots.
 
-```{r}
+```{r patchwork-complex}
 g3 <- ggplot(penguins_raw) +
   aes(x = Island, y = `Culmen Length (mm)`) +
   geom_boxplot() +
@@ -343,12 +360,12 @@ g3 <- ggplot(penguins_raw) +
 There's a lot more you can do with `patchwork`, including adjusting the widths and heights, but we'll stop here for now.
 
 # Saving plots
-The last big thing you'll need to know about plotting is how to save your plots. `ggplot2` comes with a nifty `ggsave()` function which you can use to save your plots in a number of different formats. Here we'll save our most recent combined plot as both a PDF and a JPEG. The former is a vector format, meaning all of the elements of the figure as geometric shapes, and, because of this, none of the data is lost (aka "lossless"). The latter is a raster format, meaning the figure is converted to a 2-D array of colored pixels of a desired size, and because of this, some of the data is lost in the process (aka "lossy"). This results in the pixellation that you see when you zoom in on a JPEG. `ggsave()` detects what format you want based on the file extension, so we just need to specify the file location and the object to be saved (and optionally the dimensions of the output file).
+The last big thing you'll need to know about plotting is how to save your plots. `ggplot2` comes with a nifty `ggsave()` function which you can use to save your plots in a number of different formats. Here we'll save our most recent combined plot as both a PDF and a JPEG. The former is a vector format, meaning all of the elements of the figure as geometric shapes, and, because of this, none of the data is lost (aka "lossless"). The latter is a raster format, meaning the figure is converted to a 2-D array of colored pixels of a desired size, and because of this, some of the data is lost in the process (aka "lossy"). This results in the pixellation that you see when you zoom in on a JPEG. `ggsave()` detects what format you want based on the file extension, so we just need to specify the file location and the object to be saved (and optionally the dimensions of the output file). It's usually a good idea to keep all figures in their own folder (which was already created for you).
 
-```{r, eval = FALSE}
+```{r ggsave, eval = FALSE}
 gg <- (g1 | g2) / g3
 ggsave("figures/penguins_1.pdf", gg, height = 10, width = 10)
 ggsave("figures/penguins_1.jpg", gg, height = 10, width = 10)
 ```
 
-Now we'll use the git tools within RStudio to commit these files and push them to our GitHub repositories. Since we are working within an RStudio project, the Git tools are integrated into our project, indicated by the "Git" tab in the top-right. Clicking this tab will show you all of the files that have been modified since we last committed. In this case, you should see your code file and your two new figures. Click the boxes next to these three files to queue them for committing. Then click the "Commit" button. A new window should open where you can enter a commit message. Then click the "Commit" button and then "Push". And that's that!
+Now we'll once again use the git tools within RStudio to commit these files and push them to our GitHub repository. Click on the "Git" tab in the top-right. Clicking this tab will show you all of the files that have been modified since we last committed. In this case, you should see your code file (modified from our last session) and your two new figures. Click the boxes next to these three files to queue them for committing. Then click the <kbd>Commit</kbd> button. Write a succinct commit message in the window, then click the <kbd>Commit</kbd> button, then the <kbd>Push</kbd> button. And that's that!
